just_stream_it/css/component/grid.css
.grid {
    margin: var(--spacing-3xl) 0 var(--spacing-lg) 0;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--spacing-2xl);
}

.grid article {
    position: relative;
    overflow: hidden;
    width: 100%;
    height: 252px;
    cursor: pointer;
}

.grid img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.grid article div {
    position: absolute;
    height: 100px;
    width: 100%;
    top: var(--spacing-xl);
    background-color: rgb(0 0 0 / 50%);
    padding: var(--spacing-md);
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
}

.grid article div button {
    position: absolute;
    width: 81px;
    bottom: var(--spacing-xs);
    right: var(--spacing-xs);
}

.grid article:hover .secondary-button {
    background-color: var(--header-footer-bg);
}

.grid h3 {
    width: 100%;
    color: var(--text-white);
    font-size: var(--font-size-xs);
    font-weight: var(--font-weight-semi-bold);
}

/* --tablet-breakpoint: 768 (see scaling.css) */
@media screen and (width <= 768px) {
    .grid {
        grid-template-columns: repeat(2, 1fr);
        gap: var(--spacing-xl);
        margin: var(--spacing-lg) 0 var(--spacing-lg) 0;
}

    .grid article {
        width: 100%;
        height: 289px;
    }

    .grid article:nth-child(n+5) {
        display: none;
    }

    .grid h3 {
    font-size: var(--font-size-xs-tablet);
}

}

/* --mobile-breakpoint: 576px (see scaling.css) */
@media screen and (width <= 576px) {
    .grid {
        grid-template-columns: repeat(1, 1fr);
        gap: var(--spacing-xl);
        margin: var(--spacing-lg) 0 var(--spacing-lg) 0;
}

    .grid article {
        width: 100%;
        height: 318px;
    }

    .grid article:nth-child(n+3) {
        display: none;
    }

    .grid h3 {
        font-size: var(--font-size-xs-mobile);
}

}

